<resources>
    <string name="app_name">AllEasy</string>
    <string name="copyright">Copyright ©</string>
    <string name="owner">Gabriel MJr</string>
    
    <string name="n">n</string>
	<string name="ax">x²</string>
	<string name="bx">x</string>
    <string name="hc">c</string>
	<string name="hb">b</string>
	<string name="a">A</string>
    <string name="p">p</string>
	<string name="c">C</string>
    <string name="ha">a</string>
	<string name="y">y =</string>
    <string name="fatp">!</string>
	<string name="x">x</string>
	
	<string name="clear">C</string>
    
	<string name="fluid_flow_flowRate1_formula">Q = V / ∆t </string> <!--Formula of /fluid_flow/first_fluid_fluw_formula-->
	<string name="fluid_flow_flowRate2_formula">Q = A × v </string> <!--Formula of /fluid_flow/second_fluid_flow_formula-->
	<string name="fluid_flow_flowRate3_formula">Q = π × r² × v</string> <!--Formula of /fluid_flow/third_fluid_flow_formula-->
	<string name="fluid_flow_time1_formula">∆t = V / Q</string> <!--Formula of /fluid_flow/time-->
	<string name="fluid_flow_volume1_formula">V = ∆t × Q</string> <!--Forma of /fluid_flow/volume-->
	<string name="fluid_flow_speed1_formula">v = Q / A</string> <!--Formula of /fluid_flow/speed1-->
	<string name="fluid_flow_speed2_formula">v = Q / (π × r²)</string> <!--Formula of /fluid_flow/speed2-->
	<string name="fluid_flow_area1_formula">A = Q / v</string> <!--Formula of /fluid_flow/area-->
	<string name="fluid_flow_ray1_formula">r = √[Q ÷ (π × v)]</string> <!--Formula of /fluid_flow/ray-->
    
    <string name="kinematic_mru_displacement1_formula">∆S = Sf - Si</string>
    <string name="kinematic_mru_displacement2_formula">∆S = ∆t × vm</string>
    <string name="kinematic_mru_displacement3_formula">∆S = (tf - ti) × vm</string>
    <string name="kinematic_mru_final_displacement_formula">Sf = Si + ∆S</string>
    <string name="kinematic_mru_initial_displacement_formula">Si = Sf - ∆S</string>
    <string name="kinematic_mru_displacement_law_formula">S = Si + v × ∆t</string>
    <string name="kinematic_mru_speed_law1_formula">v = ∆S / ∆t</string>
    <string name="kinematic_mru_speed_law2_formula">v = (Sf - Si) / (tf - ti)</string>
    <string name="kinematic_mru_time1_formula">∆t = tf - ti</string>
    <string name="kinematic_mru_time2_formula">∆t = ∆S / v</string>
    <string name="kinematic_mru_time3_formula">∆t=  (Sf - Si) / v</string>
    <string name="kinematic_mru_initial_time_formula">ti = tf - ∆t</string>
    <string name="kinematic_mru_final_time_formula">tf = ti + ∆t</string>
    
    <string name="kinematic_muv_acceleration1_formula">a = ∆v ÷ ∆t</string>
    <string name="kinematic_muv_acceleration2_formula">a = (∆v) ÷ (tf - ti)</string>
    <string name="kinematic_muv_acceleration3_formula">a = (vf - vi) ÷ (∆t)</string>
    <string name="kinematic_muv_acceleration4_formula">a = (vf - vi) ÷ (tf - ti)</string>
    <string name="kinematic_muv_speed1_formula">∆v = ∆t × a</string>
    <string name="kinematic_muv_speed2_formula">∆v = (tf - ti) × a</string>
    <string name="kinematic_muv_speed3_formula">vi = vf - ∆t × a</string>
    <string name="kinematic_muv_speed4_formula">vf = ∆t × a + vi</string>
    <string name="kinematic_muv_time1_formula">∆t = ∆v ÷ a</string>
    <string name="kinematic_muv_time2_formula">∆t = (vf - vi) ÷ a</string>
    <string name="kinematic_muv_time3_formula">ti = tf - ∆v ÷ a</string>
    <string name="kinematic_muv_time4_formula">ti = tf - (vf - vi) ÷ a</string>
    <string name="kinematic_muv_time5_formula">tf = ti + ∆v ÷ a</string>
    <string name="kinematic_muv_time6_formula">tf = ti + (vf - vi) ÷ a</string>
    
	<string name="piValue"> 3.14 </string>
    
	<string name="areap">A = </string>
    <string name="rayp">r = </string>
	<string name="speedp">v = </string>
    <string name="sfp">Sf = </string>
    <string name="sip">Si = </string>
    <string name="nfp">n! =</string>
    <string name="pfp">p! =</string>
    <string name="nmpfp">(n - p)! = </string>
    <string name="x1p">x1 =</string>
    <string name="x2p">x2 = </string>
    <string name="dfp">Df = </string>
    <string name="cdfp">D’f = </string>
    <string name="xvp">Xv = </string>
    <string name="yvp">Yv = </string>
    <string name="initial_timep">ti = </string>
    <string name="final_timep">tf = </string>
    <string name="pip">π = </string>
    <string name="sp">S =</string>
    <string name="volumep">V = </string>
    <string name="dtp">∆t = </string>
    <string name="flowRatep">Q =</string>
	<string name="wht"> = ? </string>
    <string name="dsp">∆S = </string>
    <string name="dvp">∆v = </string>
    <string name="vip">vi = </string>
    <string name="vfp">vf = </string>
    <string name="accelerationp">a = </string>

    <string name="delta_speed">∆v</string>
    <string name="initial_speed">vi</string>
    <string name="final_speed">vf</string>
    <string name="delta_time">∆t </string>
    <string name="final_time">tf</string>
    <string name="initial_time">ti</string>
    <string name="final_displacement">Sf</string>
    <string name="initial_displacement">Si</string>
	<string name="displacementSigle">S</string>
    <string name="second">s</string>
	<string name="ray">r </string>
    <string name="area">A </string>
	<string name="speed">v </string>
    <string name="temperature">T</string>
    <string name="volumeLitre">L</string> 
    <string name="acceleration">a</string>
    <string name="ds">∆S</string>
    <string name="q">Q</string>
    
    <string name="dm">m</string>
    <string name="speedmps">m/s</string>
    <string name="amq">m/s²</string>
    <string name="mpsq">m/s²</string>
    <string name="vmc">m³</string>
  
    <string name="speedmcps">m³/s</string>
    
    <string name="volume_unit_symbol_cube_meter">m³</string>
    
    <string name="area_unit_symbol_square_meter">m²</string>
   
    
    <string name="distance_unit_symbol_meter">m</string>
    
    <string name="velocity_unit_symbol_meter_per_second">m/s</string>

    <string name="flow_rate_unit_symbol_cube_meter_per_second">m³/s</string>
    
    <string name="acceleration_unit_symbol_meter_per_square_second">m/s²</string>
    
    <string name="volume_symbol_equals">V = </string>
    <string name="time_symbol_equals">t = </string>
    <string name="flow_rate_symbol_equals">V = </string>
    
    <string name="newLine">\n</string>
    <string name="multiplication">×</string>
    <string name="division">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="openParenthesis">(</string>
    <string name="closeParenthesis">)</string>
</resources>
