<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".math.Combination"
	android:layout_width="match_parent"
	android:orientation="horizontal"
	android:layout_height="match_parent">
    
    <include
        layout="@layout/action_bar"/>

	<TextView
		android:id="@+id/c"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:textSize="70sp"
		android:text="@string/c"
		android:layout_marginTop="150dp"
		android:layout_centerHorizontal="true"/>

	<EditText
		android:id="@+id/n"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="17sp"
		android:imeOptions="actionNext"
		android:inputType="number"
		android:hint="@string/n"
		android:text=""
		android:layout_marginTop="110dp"
		android:layout_marginStart="70dp"
		android:ems="4"
		android:layout_alignEnd="@id/c"/>

	<EditText
		android:id="@+id/p"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="17sp"
		android:imeOptions="actionNext"
		android:inputType="number"
		android:hint="@string/p"
		android:text=""
		android:ems="2"
		android:layout_toEndOf="@id/c"
		android:layout_marginTop="210dp"/>

	<TextView
		android:id="@+id/result"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:textSize="25sp"
		android:layout_marginTop="320dp"
		android:focusable="true"
		android:typeface="normal"
		android:textIsSelectable="true"
		android:layout_alignParentStart="true"/>

</RelativeLayout>

