<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
		tools:content="com.GabrielMJr.Twaire.AllEasy.Math.FXP.F1"
		android:layout_width="fill_parent"
    android:layout_height="fill_parent"
		android:background="@color/white"
    android:orientation="vertical">

		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:background="@color/white">

						<TextView
								android:layout_width="30dp"
								android:layout_height="40dp"
								android:layout_marginTop="100dp"
								android:layout_marginRight="5dp"
								android:textSize="20sp"
								android:background="@color/white"
								android:text="@string/y"/>

						<EditText
								android:id="@+id/a"
								android:layout_width="30dp"
								android:layout_height="40dp"
								android:layout_marginTop="100dp"
								android:background="@color/white"
								android:inputType="phone"
								android:imeOptions="actionNext"
								android:hint="@string/a"
								android:textSize="20sp"
								android:text=""/>
						
						<TextView
								android:layout_width="40dp"
								android:layout_height="40dp"
								android:layout_marginTop="65dp"
								android:background="@color/white"
								android:hint="@string/x"
								android:textSize="16sp"
								android:text=""/>
				</LinearLayout>

				<Button
						android:id="@+id/det"
						android:layout_width="100dp"
						android:layout_height="50dp"
						android:textSize="17sp"
						android:background="@color/white"
						android:text="@string/det"/>

				<TextView
						android:id="@+id/result"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:textSize="23sp"
						android:layout_marginLeft="10dp"
						android:focusable="true"
						android:typeface="normal"
						android:textColorHighlight="@color/white"
						android:textIsSelectable="true"
						android:text=""/>
		</LinearLayout>

</ScrollView>
